cabal-version: 2.2

name:        drama
version:     0.5.0.0
synopsis:    Actor library for Haskell
description: Actor library for Haskell
category:    Concurrency
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/drama
license:     BSD-3-Clause
copyright:   2022 Evan Relf
tested-with: GHC == 8.6, GHC == 8.8, GHC == 8.10, GHC == 9.0

license-file: LICENSE
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md
  examples/*.hs


common common
  build-depends: base >= 4.12 && < 5.0
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -fshow-warning-groups


common executable
  build-depends: drama
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: common
  hs-source-dirs: src
  build-depends:
    , ki-unlifted   >= 1.0 && < 2.0
    , stm
    , transformers
    , unagi-chan    >= 0.4 && < 0.5
    , unliftio-core
  exposed-modules:
    Drama
    Drama.Internal


executable example-shared-resource
  import: common, executable
  main-is: examples/shared-resource.hs


executable example-use
  import: common, executable
  main-is: examples/use.hs
