cabal-version: 3.0

name:        starring
version:     0.1.0.0
description: Simple actor library for Haskell
synopsis:    Simple actor library for Haskell
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/starring
license:     ISC
copyright:   2021 Evan Relf


common common
  build-depends: base >= 4.9 && < 5.0
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -fshow-warning-groups


library
  import: common
  hs-source-dirs: src
  build-depends:
    , ki ^>= 0.2.0.1
    , unagi-chan ^>= 0.4.1.3
  exposed-modules:
    , Starring
  other-modules:
    , Starring.Demo
